no scrollbar as canvas dom element no longer has new line before and after

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -31,6 +31,9 @@ html {
       background-color: #222;
       z-index: 2;
       transition: all .5s ease;
+      canvas {
+        display: block;
+      }
       &.active {
         left: 0;
         div.close-container {
